Added in CSS files that were missing to match with components

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>jp aesthetic • Web Design</title>
+    <title>life itself • blog</title>
 
 
     <!-- Start Single Page Apps for GitHub Pages -->
@@ -76,7 +76,7 @@
     <div id="root"></div>
 
     <!-- single page app in bundle.js -->
-    <script src="/My-Portfolio/build/bundle.js"></script>
+    <script src="/life-itself/build/bundle.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
